--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,6 @@
             </button>
         </a>
     </nav>
-    <script src="/js/script.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
