--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Salud Ocup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body onload="startCountdown()">
     <img
@@ -34,6 +34,6 @@
         </button>
       </a>
     </nav>
-    <script src="/js/index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
