--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   </head>
   <body onload="startCountdown()">
     <img
-      src="https://drive.google.com/uc?id=160swttBUh5qnlsCxcjAG71QT-1mkmvVm"
+      src="../image/font.png"
       id="imagen-principal"
     />
     <nav id="barra" class="barra-white">
