--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   </head>
   <body onload="startCountdown()">
     <img
-      src="../image/font.png"
+      src="../image/image.png"
       id="imagen-principal"
     />
     <nav id="barra" class="barra-white">
